--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       gtag('config', 'G-YOUR_MEASUREMENT_ID');
     </script>
     <title>Shantanu Banerjee</title>
+    <link rel="icon" type="image/png" href="assets/20250110_174112.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=1.1">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -36,13 +37,13 @@
             
         </nav>
 <section class="work-stack">
-    <h3>Force Multiplier</h3>
+    <h3>Work Stack</h3>
     <div class="stack-logos">
         <a href="https://openai.com" target="_blank" rel="noopener noreferrer">
             <img src="assets/openai-logo.png" alt="OpenAI" class="stack-logo">
         </a>
-        <a href="https://www.perplexity.ai" target="_blank" rel="noopener noreferrer">
-            <img src="assets/perplexity-logo.png" alt="Perplexity" class="stack-logo" style="border: 2px solid #ccc;">
+        <a href="https://www.perplexity.ai" target="_blank" rel="noopener noreferrer"> 
+            <img src="assets/perplexity-logo.png" alt="Perplexity" class="stack-logo" style="border: 2px solid #ccc;border-radius:12px">
         </a>
         <a href="https://www.windsurf.ai" target="_blank" rel="noopener noreferrer">
             <img src="assets/windsurf.png" alt="Windsurf" class="stack-logo">
