--- a/work/index.html
+++ b/work/index.html
@@ -12,6 +12,7 @@
       gtag('config', 'G-FF75XJ4H6G');
     </script>
     <title>Work - Shantanu Banerjee</title>
+    <link rel="icon" type="image/png" href="/assets/20250110_174112.jpg">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
