--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
         </nav>
 <section class="work-stack">
-    <h3>Work Stack</h3>
+    <h3>Force Multiplier</h3>
     <div class="stack-logos">
         <a href="https://openai.com" target="_blank" rel="noopener noreferrer">
             <img src="assets/openai-logo.png" alt="OpenAI" class="stack-logo">
@@ -46,7 +46,7 @@
             <img src="assets/perplexity-logo.png" alt="Perplexity" class="stack-logo" style="border: 2px solid #ccc;border-radius:12px">
         </a>
         <a href="https://www.windsurf.ai" target="_blank" rel="noopener noreferrer">
-            <img src="assets/windsurf.png" alt="Windsurf" class="stack-logo">
+            <img src="assets/windsurf.png" alt="Windsurf" class="stack-logo" style="border-radius:12px">
         </a>
     </div>
 </section>
