--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -42,7 +42,7 @@
         <main class="thoughts-container">
             <div class="article-list">
                 <article class="article-item">
-                    <a href="#" class="article-link">
+                    <a href="now-playing.html" class="article-link">
                         <span class="article-date">May 2025</span>
                         <span class="article-title">Now Playing</span>
                     </a>
